--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -21,6 +21,7 @@
         
         .showCase{
             width: 100%;
+            height: auto;
             gap: 1.5rem;
             justify-content: space-around;
             flex-wrap: wrap;
