--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -18,8 +18,37 @@
             align-items: center;
             justify-content: space-between;
             flex-wrap: wrap;
+            .downloadButton {
+                margin-top: 10px; 
+            padding: 15px 20px;
+            font-size: 18px;
+            font-weight: bold;
+            background-color: #000000; 
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        
+            &:hover {
+              background-color: #45a049; 
+            }
+              }
         }
-
+        .hireButton {
+            margin-top: 10px; 
+            padding: 15px 20px;
+            font-size: 18px;
+            font-weight: bold;
+            background-color: #000000; 
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        
+            &:hover {
+              background-color: #45a049; 
+            }
+          }
 
         .lowerElements {
             @media (max-width: $sm), (max-width: $md) {
@@ -27,7 +56,7 @@
                 gap: 2rem;
                 justify-content: center;
             }
-            margin-top: 12rem;
+            margin-top: 5rem;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
@@ -36,7 +65,7 @@
                 align-items: center;
                 gap: 1rem;
                 >:nth-child(2) {
-                    line-height: 25px;
+                    line-height: 35px;
                 }
             }
 
@@ -44,7 +73,11 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                font-weight: bolder;
 
+                span{
+                    font-size: 20px ;
+                }
                 img {
                     margin-bottom: 1rem;
                     width: 3.5rem;
@@ -76,17 +109,6 @@
                 }
                 margin-bottom: -5px;
             }
-        }
-
-        .email {
-            @media (max-width: $sm ) {
-                position: relative;
-                display: none;
-            }
-            position: absolute;
-            top: 50%;
-            left: 0;
-            color: orange;
         }
     }
 }
